--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
 :root {
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 
-
-  --clr-bg-primary: #ECF9FF;
-  --clr-bg-secondary: #FFFBEB;
-  --clr-bg-tertiary: #FFE7CC;
-
+  --clr-bg-primary: #ecf9ff;
+  --clr-bg-secondary: #fffbeb;
+  --clr-bg-tertiary: #ffe7cc;
 }
-
 
 body {
   margin: 0;
   min-width: 320px;
   background: var(--clr-bg-primary);
 }
-
